# shibu-video-editor

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example-plan.md  example-transcript.json
shibu_editor/: __init__.py  chapters.py  cli.py  config.py  cuts.py  plan.py  prompts.py  transcribe.py
tests/: VALIDATION_REPORT.md  build_ground_truth.py  stress_test_protection.py  test_review_fixes.py  test_smoke.py
tests/fixtures/: ZaCijqXrK0k_ground_truth_plan.json
