[project]
name = "takeru-video-editor"
version = "0.1.0"
description = "あい × Claude Code 受講生インタビュー編集パイプラインの実装"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
transcribe = [
    "openai-whisper>=20240930",
]
elevenlabs = [
    "elevenlabs>=1.0.0",
]
all = [
    "takeru-video-editor[transcribe,elevenlabs]",
]

[project.scripts]
shibu-edit = "shibu_editor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shibu_editor"]
